--- a/resources/networking/VPC.yml
+++ b/resources/networking/VPC.yml
@@ -8,3 +8,9 @@ Resources:
       Tags:
         - Key: Name
           Value: MyAuroraVPC
+
+Outputs:
+  VPCId:
+    Value: !Ref MyVPC
+    Export:
+      Name: MyAuroraVPC-VPCId
