--- a/package.json
+++ b/package.json
@@ -24,8 +24,15 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/sequelize": "^10.0.1",
+    "aws-sdk": "^2.1692.0",
+    "dotenv": "^16.4.5",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sequelize": "^6.37.5",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -44,7 +51,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "sequelize-cli": "^6.6.2",
     "serverless-esbuild": "^1.54.5",
+    "serverless-export-outputs": "^1.0.2",
     "serverless-jetpack": "^0.11.2",
     "serverless-offline": "^14.3.4",
     "source-map-support": "^0.5.21",
