--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.1",
+    "@pinecone-database/pinecone": "^4.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "langchain": "^0.3.15",
     "mysql2": "^3.11.4",
     "pg": "^8.13.1",
+    "pinecone-client": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.5",
